--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -16,7 +16,10 @@ h1 {
 
 header {
     background-color: #1a1a2e;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
     border-bottom: 2px solid navy;
 }
@@ -25,12 +28,19 @@ header {
     color: rgb(255, 255, 255);
 }
 
+nav {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+
+}
+
 nav a,
-nav a:visited,
-nav a:not(:last-child) {
+nav a:visited {
     text-decoration: none;
     color: rgb(252, 194, 5);
-    margin-right: 2rem;
 }
 
 nav a:hover {
@@ -61,14 +71,29 @@ h2 {
     padding: 30px;
 }
 
+.projetos-container {
+    display: flex;
+    gap: 2rem;
+}
+
+.projetos-container article{
+    flex: 1;
+    min-width: 300px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
+}
+
+
 #contato {
     padding: 30px;
 }
 
-footer{
+footer {
     background-color: #1a1a2e;
-    text-align:center;
+    text-align: center;
     padding: 30px;
-    color:rgb(252, 194, 5);
+    color: rgb(252, 194, 5);
     border-top: 2px solid navy;
 }
