--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -5,13 +5,11 @@ body {
 }
 
 p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: large;
 }
 
 h1 {
     color: rgb(252, 194, 5);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
@@ -51,7 +49,6 @@ nav a:hover {
 h2 {
     text-align: center;
     padding-top: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border-top: 1px solid rgb(252, 194, 5);
 }
 
@@ -67,18 +64,48 @@ h2 {
     padding: 30px;
 }
 
+.habilidades-container {
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+.habilidades-container div {
+    flex: 1;
+    min-width: 300px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
+}
+
 #projetos {
     padding: 30px;
 }
 
 .projetos-container {
-    display: flex;
-    gap: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
 }
 
-.projetos-container article{
-    flex: 1;
-    min-width: 300px;
+.projeto-destaque {
+    grid-column: span 2;
+    text-align: center;
+    justify-content: center;
+    list-style: none;
+}
+
+.projeto-destaque li {
+    text-align: center;
+    justify-self: center;
+}
+
+.projeto-destaque a {
+    text-decoration: none;
+}
+
+.projetos-container article {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
