--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1,15 +1,28 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    background-color: #f5f5f5;
 }
 
-p {
+@media (min-width: 768px) {
+    body {
+        margin: 0;
+        background-color: #f5f5f5;
+    }
+
+    body p {
     font-size: large;
+    }
 }
 
 h1 {
     color: rgb(252, 194, 5);
+    font-size: 2rem;
+}
+
+@media (min-width: 768px) {
+    h1 {
+        font-size: rem;
+    }
 }
 
 header {
@@ -24,15 +37,29 @@ header {
 
 #introdução {
     color: rgb(255, 255, 255);
+    font-size: 0.9rem;
+    display: flex;
+    white-space: nowrap;
 }
 
 nav {
     padding-top: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 4rem;
+    gap: 1rem;
 
+}
+
+@media(min-width: 768px) {
+    nav {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 4rem;
+
+    }
 }
 
 nav a,
@@ -84,21 +111,33 @@ h2 {
 }
 
 .projetos-container {
+    flex: 1;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
+    grid-template-columns: 1fr;
+    gap: 2rem;
 }
 
-.projeto-destaque {
-    grid-column: span 2;
-    text-align: center;
-    justify-content: center;
-    list-style: none;
+@media (min-width: 768px) {
+    .projetos-container {
+        flex: 1;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+    }
 }
 
-.projeto-destaque li {
-    text-align: center;
-    justify-self: center;
+@media (min-width: 768px) {
+    .projeto-destaque {
+        grid-column: span 2;
+        text-align: center;
+        justify-content: center;
+        list-style: none;
+    }
+
+    .projeto-destaque li {
+        text-align: center;
+        justify-self: center;
+    }
 }
 
 .projeto-destaque a {
