--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -37,6 +37,8 @@ header {
     color: rgb(255, 255, 255);
     font-size: 0.9rem;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     white-space: nowrap;
 }
 
@@ -45,7 +47,7 @@ header {
    ======================================== */
 
 nav {
-    padding-top: 20px;
+    padding-top: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
